[gd_scene load_steps=6 format=3 uid="uid://0e3imrdd5i8k"]

[ext_resource type="Script" path="res://scripts/PurchaseScene.gd" id="1_cmrme"]
[ext_resource type="Theme" uid="uid://c5y30tb5md0qt" path="res://scenes/PlayerPanel.tres" id="1_vuefs"]
[ext_resource type="Theme" uid="uid://ncsyvbfrm621" path="res://SecondaryButtonTheme.tres" id="3_1csph"]
[ext_resource type="Theme" uid="uid://5hj6pfvbsvck" path="res://ActionButtonTheme.tres" id="3_r5i0x"]
[ext_resource type="FontFile" uid="uid://cxfqy12gmgcfg" path="res://assets/fonts/ApercuMonoProRegular.ttf" id="4_nla34"]

[node name="PurchaseScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vuefs")
script = ExtResource("1_cmrme")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0.462745, 0.505882, 1)

[node name="TopBar" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 80)
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 240.0

[node name="ReturnButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(320, 120)
layout_mode = 2
offset_top = 40.0
offset_right = 320.0
offset_bottom = 160.0
theme = ExtResource("3_1csph")
theme_override_font_sizes/font_size = 20
text = "Back to Main Hub"

[node name="BalanceDisplay" type="Control" parent="TopBar"]
custom_minimum_size = Vector2(1280, 240)
layout_mode = 2
anchors_preset = 0
offset_left = 320.0
offset_right = 1400.0
offset_bottom = 240.0

[node name="ChipBalance" type="Label" parent="TopBar/BalanceDisplay"]
custom_minimum_size = Vector2(640, 240)
layout_mode = 2
offset_right = 360.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("4_nla34")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="GemBalance" type="Label" parent="TopBar/BalanceDisplay"]
custom_minimum_size = Vector2(640, 240)
layout_mode = 2
offset_left = 640.0
offset_right = 1280.0
offset_bottom = 240.0
theme_override_fonts/font = ExtResource("4_nla34")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="FreeChipsSection" type="Control" parent="."]
custom_minimum_size = Vector2(320, 160)
anchors_preset = 0
offset_left = 1580.0
offset_top = 40.0
offset_right = 1900.0
offset_bottom = 200.0

[node name="ClaimButton" type="Button" parent="FreeChipsSection"]
custom_minimum_size = Vector2(320, 120)
layout_mode = 2
offset_right = 335.0
offset_bottom = 120.0
theme = ExtResource("3_r5i0x")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_nla34")
theme_override_font_sizes/font_size = 24
text = "Claim 100,000 Free Chips"
autowrap_mode = 3

[node name="CooldownTimer" type="Label" parent="FreeChipsSection"]
layout_mode = 2
offset_top = 140.0
offset_right = 320.0
offset_bottom = 172.0
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="PackagesGrid" type="GridContainer" parent="."]
custom_minimum_size = Vector2(1080, 720)
layout_mode = 0
offset_left = 60.0
offset_top = 260.0
offset_right = 780.0
offset_bottom = 980.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 15
columns = 2

[node name="PacksGrid" type="GridContainer" parent="."]
custom_minimum_size = Vector2(620, 720)
layout_mode = 0
offset_left = 1240.0
offset_top = 240.0
offset_right = 1860.0
offset_bottom = 960.0

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
